--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Альпклуб</title>
+  <title>Альпинистский клуб</title>
 
   <!-- Стили -->
   <link rel="stylesheet" href="./styles.css" />
@@ -26,7 +26,7 @@
 
   <footer id="site-footer" class="site-footer">
     <div class="container footer-inner">
-      <span>© Альпклуб</span>
+      <span>© Альпинистский клуб</span>
       <span class="muted">Учебный проект</span>
     </div>
   </footer>
@@ -35,3 +35,4 @@
   <script type="module" src="./js/app.js"></script>
 </body>
 </html>
+
